@@ -4,6 +4,10 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2007  Vasco Nunes, Piotr Ożarowski
 
+2007-06-19  Vasco Nunes
+	* Portuguese translation updated
+	* winsetup script updated
+
 2007-06-19  Piotr Ożarowski
 	* Polish translation updated
 
